<resources>
    <string name="app_name">WHY Salon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_date">Select Date</string>
    <string name="whatsup_not_installed">WhatsApp is not installed in your phone</string>
    <string name="retry">Retry</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text.</string>
    <string name="not_all_permissions_accepted">Not All Permisition Accepted</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="hello">Hello  </string>
    <string name="please_choose_language">Please Choose Language</string>
    <string name="please_choose_language_ar">برجاء اختيار اللغة</string>
    <string name="ar">العربية</string>
    <string name="en">English</string>
    <string name="next">Next</string>
    <string name="walk_title_1">Welcome to Why Salon!</string>
    <string name="walk_title_2">Seamless Booking</string>
    <string name="walk_title_3">Skilled Barbers</string>
    <string name="walk_msg_1">Your Ultimate Barbershop Experience Starts Here</string>
    <string name="walk_msg_2">Schedule appointments with just a few taps. No more waiting!</string>
    <string name="walk_msg_3">Our talented barbers are here to craft your perfect look</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="create_acount">Create new account</string>
    <string name="sign_up">Sign up</string>
    <string name="plese_continue_filling_your_info">Plese continue filling your info</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign in</string>
    <string name="creat_new_account">Create new Account</string>
    <string name="creataccount">Create Account</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="otp">Otp</string>
    <string name="password">Password</string>
    <string name="entert_y_password">Enter your password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="continue1">Continue</string>
    <string name="login">Log in</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="new_here">New here?</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="login_with_google">Login with google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="one_of_us">One of us?</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="yourbooking">Your Booking</string>
    <string name="offers">Offers</string>
    <string name="services">Services</string>
    <string name="services_">Services</string>
    <string name="setting">Settings</string>
    <string name="see_all">See all</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="book_now">Book now</string>
    <string name="explore">Explore</string>
    <string name="porfile">Porfile</string>
    <string name="support">Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="privacy_and_usage_policy">Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification">Notifications</string>
    <string name="notification_">Notifications</string>
    <string name="log_out">Log out</string>
     <string name="choose_the_service_you_want">Choose the service you want</string>
    <string name="choose_the_service_you_want_to_book">Choose the service you want to book</string>
    <string name="make_appointment">Make appointment</string>
    <string name="my_history">My History</string>
    <string name="selected">Selected</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
    <string name="great">Great</string>
    <string name="your_appointment_has_been_nsucessfully_booked">Your appointment has been \nsucessfully booked</string>
    <string name="notifaction_ll_be_send_to_you_when_the_nbooked_date_is_close">Notifactions \'ll be send to you when the \nbooked date is close</string>
    <string name="thank_you">Thank you</string>
    <string name="view_my_booking">View my Booking</string>
    <string name="rebooking">Rebooking</string>
    <string name="your_booking">Your Booking</string>
    <string name="booking_appointment">Booking Appointment</string>
    <string name="email">Email</string>
    <string name="change">Change</string>
    <string name="delete_account">Delete Account</string>
    <string name="profile">Profile</string>
    <string name="contact_information">Contact Information</string>
    <string name="location">Location</string>
    <string name="mobile">Mobile</string>
    <string name="working_hours">Working Hours</string>
    <string name="i_understand_that_this_will_remove_my_account">I understand that this will remove my account</string>
    <string name="keep_account">Keep account</string>
    <string name="confirm_delete">Please Confirm Deletion</string>
    <string name="delete_your_account">Delete your account?</string>
    <string name="send">Send</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="email_address">Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="resend">Resend</string>
    <string name="didn_t_receive_the_email">Didn\'t receive the email?</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters.</string>
    <string name="passmust_be_at_least_8_characters">Password Must be at least 8 characters.</string>
    <string name="both_passwords_must_match">Both passwords must match.</string>
    <string name="you_must_log_in">You must log in</string>
    <string name="you_must_log_in_to_be_able_to_complete_your_reservation">You must log in to be able to complete your \nreservation.</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="but_you_can_book_for">"but you can book " </string>
    <string name="cancel1"><u>Cancel Booking</u></string>
    <string name="barber_s_is_not_available_today">Barber\'s is not available today</string>
    <string name="choose_the_time_with_ahmed_ali">Choose the time with </string>
    <string name="time">Time</string>
    <string name="curent_password">Curent Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="packages">Packages</string>
    <string name="about_this_service">About this service:</string>
    <string name="about_this_pack">About this Package:</string>
    <string name="about_this_offer">About this Offer:</string>
    <string name="total">Total</string>
    <string name="cancellation_booking">Cancel booking</string>
    <string name="are_you_sure_to_cancel_your_booking">Are you sure to cancel your booking?</string>
    <string name="continuee">Continue</string>
    <string name="continuee_cancel">Continue</string>
    <string name="basket">Basket</string>
    <string name="empty_msg_email">Please Enter your Email</string>
    <string name="empty_msg_otp">Please Enter your OTP</string>
    <string name="empty_password">Please Enter your password</string>
    <string name="empty_confirm_password">Please Confirm your password</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="empty_name_msg">Please Enter your Name</string>
    <string name="msg_empty_password">Please Enter your Password</string>
    <string name="msg_empty_new_password">Please Enter your New Password</string>
    <string name="price_">Price : </string>
    <string name="price_form">Price from: </string>
    <string name="sr">SAR</string>
    <string name="min"> Min</string>
    <string name="change_password">Change Password</string>
    <string name="email_not_exist">Email Not Exist</string>
    <string name="enter_the_email_we_send_to">"Enter the OTP we send to : "</string>
    <string name="service_type">Service type:</string>
    <string name="barbars">Barbers\n</string>
    <string name="choose_the_barber">Choose the Barber</string>
    <string name="time_">Time: </string>
    <string name="date_">Date: </string>
    <string name="your_cart_is_currently_empty">Your Cart is Currently Empty!</string>
    <string name="before_you_proceed_to_checkout_you_must_add_some_service_to_your_basket_you_will_find_alot_of_intersting_services_in_our">Before you proceed to checkout, You must add some service to your basket. You will find alot of intersting services in our "Services" page </string>
    <string name="add_service">Add Service</string>
    <string name="there_are_no_offers_in_this_service">There are no Offers in this Service!</string>
    <string name="date_and_time">"Date and Time: "</string>
    <string name="h">"H "</string>
    <string name="you_don_t_have_an_appoinment">You don\'t have an appoinment</string>
    <string name="you_don_t_have_any_history">You don\'t have any history</string>
    <string name="or_try_with_other_staff">Or try with other staff</string>
    <string name="notes">Notes</string>
    <string name="msg_empty_phone_number">Please Enter your Phone Number</string>
    <string name="enter_phone_number">Enter your Phone number</string>
    <string name="rate_your_barbar">How is your service today? Please rate your experince and leave any comment or sugestations .
We value your feedback. </string>
    <string name="enter_the_email_associated_with_your_account_and_we_will_send_an_email_with_a_code_to_reset_a_file_password">Enter the email associated with your account and We will send an email with a code to reset a file password.</string>
    <string name="please_go_to">Please GO to</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="add_another_service">Add another service</string>
    <string name="complete_the_booking">Complete the booking</string>
    <string name="activate_notification">Activate notification</string>
    <string name="wrong_otp">Wrong OTP code</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="email_already_exist">Email already exists</string>
    <string name="ignore">Ignore</string>
</resources>