<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_home"
         android:title="@string/home" />

    <item
        android:id="@+id/bookingFragment"
        android:icon="@drawable/selector_booking"
        android:title="@string/booking"
       />

    <item
        android:id="@+id/basketFragment"
        android:icon="@drawable/selector_basket"
        android:title="@string/basket" />

    <item
        android:id="@+id/packagesFragment"
        android:icon="@drawable/selector_package"
         android:title="@string/packages" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/selector_setting"
        android:title="@string/setting" />
</menu>