<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_12sdp"
        android:backgroundTint="@color/white"
        android:layout_margin="@dimen/_12sdp"
      >


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lyt_data"
                    android:paddingBottom="@dimen/_24sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   >

                    <ImageView
                        android:id="@+id/iv_bg"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_270sdp"
                        android:background="@drawable/bg_sucess_order"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/great"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/_14sdp"
              android:layout_marginTop="@dimen/_100sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_2"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_appointment_has_been_nsucessfully_booked"
                        android:textColor="@color/grey_dark_"
                         android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_1" />
                    <TextView
                        android:id="@+id/tv_3"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notifaction_ll_be_send_to_you_when_the_nbooked_date_is_close"
                        android:textColor="@color/grey_dark_"
                         android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_bg" />
  <TextView
                        android:id="@+id/tv_4"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
android:text="@string/thank_you"
      android:textColor="@color/black"
      android:drawableEnd="@drawable/ic_heart"
      android:drawablePadding="@dimen/_8sdp"
                         android:textSize="@dimen/_13sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_3" />

<com.google.android.material.button.MaterialButton
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:id="@+id/btn_done"
                app:layout_constraintTop_toBottomOf="@+id/tv_4"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginHorizontal="@dimen/_30sdp"
    app:cornerRadius="@dimen/_8sdp"
    android:text="@string/view_my_booking"
    android:textAllCaps="false"
    android:textSize="@dimen/_12sdp"
    />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--
                                             <androidx.recyclerview.widget.RecyclerView
                                                 android:id="@+id/rec_offers"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                  android:clipToPadding="false"
                                              android:orientation="vertical"
                                           android:layout_margin="@dimen/_10sdp"      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 app:layout_constraintTop_toBottomOf="@+id/tv_offers_view_all"
                                                 tools:listitem="@layout/item_offers" />-->


            </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</layout>