<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/_40sdp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/_12sdp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyt_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              >


                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:text="@string/log_out"
                    android:textColor="@color/black"
                  android:paddingTop="@dimen/_10sdp"  android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/are_you_sure_you_want_to_logout"
                    android:textAlignment="center"
                    android:textColor="@color/grey_dark_"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_1" />
<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/_1sdp"
android:background="@color/grey"
 android:layout_marginHorizontal="@dimen/_10sdp"   android:id="@+id/v1"
    android:layout_marginTop="@dimen/_10sdp"
    app:layout_constraintTop_toBottomOf="@id/tv_2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintTop_toBottomOf="@id/v1">

                    <TextView
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/light_blue_700"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold"
                        app:cornerRadius="@dimen/_8sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_2"
                        app:layout_constraintWidth_percent=".5" />

                    <View
    android:layout_width="1dp"
    android:layout_height="match_parent"
    android:background="@color/grey"
     app:layout_constraintTop_toBottomOf="@id/tv_2"/>

                    <TextView
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/log_out"
                        android:textAllCaps="false"
                       android:gravity="center"
                        android:textColor="@color/light_blue_700"
                        android:textStyle="bold"
                        android:textSize="@dimen/_11sdp"
                        app:cornerRadius="@dimen/_8sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_2"
                    />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--
                                         <androidx.recyclerview.widget.RecyclerView
                                             android:id="@+id/rec_offers"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                              android:clipToPadding="false"
                                          android:orientation="vertical"
                                       android:layout_margin="@dimen/_10sdp"      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                             app:layout_constraintEnd_toEndOf="parent"
                                             app:layout_constraintStart_toStartOf="parent"
                                             app:layout_constraintTop_toBottomOf="@+id/tv_offers_view_all"
                                             tools:listitem="@layout/item_offers" />-->


        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</layout>